--- a/LSTM-TimeSeries-Forecasting.ipynb
+++ b/LSTM-TimeSeries-Forecasting.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3852becc-1c06-4551-a5d4-ebd325ed7d86",
+   "metadata": {},
+   "source": [
+    "https://www.youtube.com/watch?v=c0k-YLQGKjY"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "7272c844-c340-40f2-87ca-69764a9d7eb3",
@@ -45,16 +53,7 @@
    "execution_count": 5,
    "id": "c33f51a1-0bf3-42f6-90ea-45e1781bef61",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/jena_climate_2009_2016.csv.zip\n",
-      "13568290/13568290 [==============================] - 4s 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "zip_path = tf.keras.utils.get_file(\n",
     "    origin='https://storage.googleapis.com/tensorflow/tf-keras-datasets/jena_climate_2009_2016.csv.zip',\n",
@@ -65,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "226b61ef-4fc7-415a-ac6f-3fa63d26c823",
    "metadata": {},
    "outputs": [
@@ -354,7 +353,7 @@
        "[420551 rows x 15 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "443634ee-d8c6-49e0-a701-5c66264be78f",
    "metadata": {},
    "outputs": [
@@ -405,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "a6b1e380-eb96-4fc9-bb2a-17a3400ede81",
    "metadata": {},
    "outputs": [
@@ -694,7 +693,7 @@
        "[70091 rows x 15 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "c70fb55e-514c-492b-bcf4-ec5106bbe9d7",
    "metadata": {},
    "outputs": [
@@ -1357,7 +1356,7 @@
        "2009-01-02 02:00:00      0.49           0.88     209.8  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "23ea82f4-0764-4a0d-a6b0-0dec04a29d61",
    "metadata": {},
    "outputs": [
@@ -1379,7 +1378,7 @@
        "<AxesSubplot:xlabel='Date Time'>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1403,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "2c75bfd5-ca29-49bc-a7a1-a3d90ccda6cb",
    "metadata": {},
    "outputs": [],
@@ -1426,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "106a4c18-38da-4d0b-b734-61bd28b23865",
    "metadata": {},
    "outputs": [
@@ -1436,7 +1435,7 @@
        "((70086, 5, 1), (70086,))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1449,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "b5bf0206-8d51-4a45-9b04-814863c8966b",
    "metadata": {},
    "outputs": [
@@ -1496,7 +1495,7 @@
        "2009-01-01 01:00:00     -8.05"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1507,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "408027ec-c2b5-4761-8a4c-73a8e943e6b0",
    "metadata": {},
    "outputs": [
@@ -1553,7 +1552,7 @@
        "        [-2.89]]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1564,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "id": "7f42fdf6-e4a7-4888-8eb4-bf9f14095e46",
    "metadata": {},
    "outputs": [
@@ -1574,7 +1573,7 @@
        "array([-9.67, -9.17, -8.1 , ..., -2.75, -2.89, -3.93])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1585,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "46a08f8f-199e-4e7f-be4e-1ea07f8ce541",
    "metadata": {},
    "outputs": [
@@ -1595,7 +1594,7 @@
        "((60000, 5, 1), (60000,), (5000, 5, 1), (5000,), (5086, 5, 1), (5086,))"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1609,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "675d2952-00fa-4e5b-9059-751f89c3211c",
    "metadata": {},
    "outputs": [],
@@ -1624,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "b7f6ac55-25f7-4b3c-b13e-edb1ebe2dc00",
    "metadata": {},
    "outputs": [
@@ -1632,15 +1631,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " lstm_1 (LSTM)               (None, 64)                16896     \n",
+      " lstm (LSTM)                 (None, 64)                16896     \n",
       "                                                                 \n",
-      " dense_2 (Dense)             (None, 8)                 520       \n",
+      " dense (Dense)               (None, 8)                 520       \n",
       "                                                                 \n",
-      " dense_3 (Dense)             (None, 1)                 9         \n",
+      " dense_1 (Dense)             (None, 1)                 9         \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 17,425\n",
